--- a/Speech_Recognition.ipynb
+++ b/Speech_Recognition.ipynb
@@ -85,7 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Here we convert text from txt file and convert it into speech\n",
+    "#Here we take text from txt file and convert it into speech\n",
     "file = open(\"Ashish.txt\", \"r\").read().replace(\"\\n\", \" \")"
    ]
   },
@@ -187,7 +187,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Here we convert speech data in audio_files_harvard.wav file into text format\n",
+    "#Here we convert speech data presents in audio_files_harvard.wav file into text format\n",
     "harvard = sr.AudioFile(\"audio_files_harvard.wav\")\n",
     "with harvard as source:\n",
     "    audio = r.record(source)"
